fix: fix org chart no wrap

--- a/src/assets/scss/components/_organization-tree.scss
+++ b/src/assets/scss/components/_organization-tree.scss
@@ -220,7 +220,7 @@ body {
 					font-size: 0.875rem;
 					font-weight: 400;
 					line-height: normal;
-					word-break: break-word;
+					white-space: nowrap;
 
 					.name {
 						color: rgb(
